play-script-java/src/main/java/com/ooooo/antlr4/PlayScriptParser.java
// Generated from PlayScript.g4 by ANTLR 4.9.3

package com.ooooo.antlr4;

import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PlayScriptParser extends Parser {

  static {
    RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION);
  }

  protected static final DFA[] _decisionToDFA;
  protected static final PredictionContextCache _sharedContextCache =
      new PredictionContextCache();
  public static final int
      ABSTRACT = 1, ASSERT = 2, BOOLEAN = 3, BREAK = 4, BYTE = 5, CASE = 6, CATCH = 7, CHAR = 8,
      CLASS = 9, CONST = 10, CONTINUE = 11, DEFAULT = 12, DO = 13, DOUBLE = 14, ELSE = 15,
      ENUM = 16, EXTENDS = 17, FINAL = 18, FINALLY = 19, FLOAT = 20, FOR = 21, IF = 22, GOTO = 23,
      IMPLEMENTS = 24, IMPORT = 25, INSTANCEOF = 26, INT = 27, INTERFACE = 28, LONG = 29,
      NATIVE = 30, NEW = 31, PACKAGE = 32, PRIVATE = 33, PROTECTED = 34, PUBLIC = 35, RETURN = 36,
      SHORT = 37, STATIC = 38, STRICTFP = 39, SUPER = 40, SWITCH = 41, SYNCHRONIZED = 42,
      THIS = 43, THROW = 44, THROWS = 45, TRANSIENT = 46, TRY = 47, VOID = 48, VOLATILE = 49,
      WHILE = 50, FUNCTION = 51, STRING = 52, DECIMAL_LITERAL = 53, HEX_LITERAL = 54,
      OCT_LITERAL = 55, BINARY_LITERAL = 56, FLOAT_LITERAL = 57, HEX_FLOAT_LITERAL = 58,
      BOOL_LITERAL = 59, CHAR_LITERAL = 60, STRING_LITERAL = 61, NULL_LITERAL = 62,
      LPAREN = 63, RPAREN = 64, LBRACE = 65, RBRACE = 66, LBRACK = 67, RBRACK = 68, SEMI = 69,
      COMMA = 70, DOT = 71, ASSIGN = 72, GT = 73, LT = 74, BANG = 75, TILDE = 76, QUESTION = 77,
      COLON = 78, EQUAL = 79, LE = 80, GE = 81, NOTEQUAL = 82, AND = 83, OR = 84, INC = 85,
      DEC = 86, ADD = 87, SUB = 88, MUL = 89, DIV = 90, BITAND = 91, BITOR = 92, CARET = 93,
      MOD = 94, ADD_ASSIGN = 95, SUB_ASSIGN = 96, MUL_ASSIGN = 97, DIV_ASSIGN = 98, AND_ASSIGN = 99,
      OR_ASSIGN = 100, XOR_ASSIGN = 101, MOD_ASSIGN = 102, LSHIFT_ASSIGN = 103, RSHIFT_ASSIGN = 104,
      URSHIFT_ASSIGN = 105, ARROW = 106, COLONCOLON = 107, AT = 108, ELLIPSIS = 109, WS = 110,
      COMMENT = 111, LINE_COMMENT = 112, IDENTIFIER = 113;
  public static final int
      RULE_classDeclaration = 0, RULE_classBody = 1, RULE_classBodyDeclaration = 2,
      RULE_memberDeclaration = 3, RULE_functionDeclaration = 4, RULE_functionBody = 5,
      RULE_typeTypeOrVoid = 6, RULE_qualifiedNameList = 7, RULE_formalParameters = 8,
      RULE_formalParameterList = 9, RULE_formalParameter = 10, RULE_lastFormalParameter = 11,
      RULE_variableModifier = 12, RULE_qualifiedName = 13, RULE_fieldDeclaration = 14,
      RULE_constructorDeclaration = 15, RULE_variableDeclarators = 16, RULE_variableDeclarator = 17,
      RULE_variableDeclaratorId = 18, RULE_variableInitializer = 19, RULE_arrayInitializer = 20,
      RULE_classOrInterfaceType = 21, RULE_typeArgument = 22, RULE_literal = 23,
      RULE_integerLiteral = 24, RULE_floatLiteral = 25, RULE_prog = 26, RULE_block = 27,
      RULE_blockStatements = 28, RULE_blockStatement = 29, RULE_statement = 30,
      RULE_switchBlockStatementGroup = 31, RULE_switchLabel = 32, RULE_forControl = 33,
      RULE_forInit = 34, RULE_enhancedForControl = 35, RULE_parExpression = 36,
      RULE_expressionList = 37, RULE_functionCall = 38, RULE_expression = 39,
      RULE_primary = 40, RULE_typeList = 41, RULE_typeType = 42, RULE_functionType = 43,
      RULE_primitiveType = 44, RULE_creator = 45, RULE_superSuffix = 46, RULE_arguments = 47;

  private static String[] makeRuleNames() {
    return new String[]{
        "classDeclaration", "classBody", "classBodyDeclaration", "memberDeclaration",
        "functionDeclaration", "functionBody", "typeTypeOrVoid", "qualifiedNameList",
        "formalParameters", "formalParameterList", "formalParameter", "lastFormalParameter",
        "variableModifier", "qualifiedName", "fieldDeclaration", "constructorDeclaration",
        "variableDeclarators", "variableDeclarator", "variableDeclaratorId",
        "variableInitializer", "arrayInitializer", "classOrInterfaceType", "typeArgument",
        "literal", "integerLiteral", "floatLiteral", "prog", "block", "blockStatements",
        "blockStatement", "statement", "switchBlockStatementGroup", "switchLabel",
        "forControl", "forInit", "enhancedForControl", "parExpression", "expressionList",
        "functionCall", "expression", "primary", "typeList", "typeType", "functionType",
        "primitiveType", "creator", "superSuffix", "arguments"
    };
  }

  public static final String[] ruleNames = makeRuleNames();

  private static String[] makeLiteralNames() {
    return new String[]{
        null, "'abstract'", "'assert'", "'boolean'", "'break'", "'byte'", "'case'",
        "'catch'", "'char'", "'class'", "'const'", "'continue'", "'default'",
        "'do'", "'double'", "'else'", "'enum'", "'extends'", "'final'", "'finally'",
        "'float'", "'for'", "'if'", "'goto'", "'implements'", "'import'", "'instanceof'",
        "'int'", "'interface'", "'long'", "'native'", "'new'", "'package'", "'private'",
        "'protected'", "'public'", "'return'", "'short'", "'static'", "'strictfp'",
        "'super'", "'switch'", "'synchronized'", "'this'", "'throw'", "'throws'",
        "'transient'", "'try'", "'void'", "'volatile'", "'while'", "'function'",
        "'string'", null, null, null, null, null, null, null, null, null, "'null'",
        "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", "'.'", "'='",
        "'>'", "'<'", "'!'", "'~'", "'?'", "':'", "'=='", "'<='", "'>='", "'!='",
        "'&&'", "'||'", "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", "'&'", "'|'",
        "'^'", "'%'", "'+='", "'-='", "'*='", "'/='", "'&='", "'|='", "'^='",
        "'%='", "'<<='", "'>>='", "'>>>='", "'->'", "'::'", "'@'", "'...'"
    };
  }

  private static final String[] _LITERAL_NAMES = makeLiteralNames();

  private static String[] makeSymbolicNames() {
    return new String[]{
        null, "ABSTRACT", "ASSERT", "BOOLEAN", "BREAK", "BYTE", "CASE", "CATCH",
        "CHAR", "CLASS", "CONST", "CONTINUE", "DEFAULT", "DO", "DOUBLE", "ELSE",
        "ENUM", "EXTENDS", "FINAL", "FINALLY", "FLOAT", "FOR", "IF", "GOTO",
        "IMPLEMENTS", "IMPORT", "INSTANCEOF", "INT", "INTERFACE", "LONG", "NATIVE",
        "NEW", "PACKAGE", "PRIVATE", "PROTECTED", "PUBLIC", "RETURN", "SHORT",
        "STATIC", "STRICTFP", "SUPER", "SWITCH", "SYNCHRONIZED", "THIS", "THROW",
        "THROWS", "TRANSIENT", "TRY", "VOID", "VOLATILE", "WHILE", "FUNCTION",
        "STRING", "DECIMAL_LITERAL", "HEX_LITERAL", "OCT_LITERAL", "BINARY_LITERAL",
        "FLOAT_LITERAL", "HEX_FLOAT_LITERAL", "BOOL_LITERAL", "CHAR_LITERAL",
        "STRING_LITERAL", "NULL_LITERAL", "LPAREN", "RPAREN", "LBRACE", "RBRACE",
        "LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", "ASSIGN", "GT", "LT", "BANG",
        "TILDE", "QUESTION", "COLON", "EQUAL", "LE", "GE", "NOTEQUAL", "AND",
        "OR", "INC", "DEC", "ADD", "SUB", "MUL", "DIV", "BITAND", "BITOR", "CARET",
        "MOD", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "AND_ASSIGN",
        "OR_ASSIGN", "XOR_ASSIGN", "MOD_ASSIGN", "LSHIFT_ASSIGN", "RSHIFT_ASSIGN",
        "URSHIFT_ASSIGN", "ARROW", "COLONCOLON", "AT", "ELLIPSIS", "WS", "COMMENT",
        "LINE_COMMENT", "IDENTIFIER"
    };
  }

  private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
  public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  /**
   * @deprecated Use {@link #VOCABULARY} instead.
   */
  @Deprecated
  public static final String[] tokenNames;

  static {
    tokenNames = new String[_SYMBOLIC_NAMES.length];
    for (int i = 0; i < tokenNames.length; i++) {
      tokenNames[i] = VOCABULARY.getLiteralName(i);
      if (tokenNames[i] == null) {
        tokenNames[i] = VOCABULARY.getSymbolicName(i);
      }

      if (tokenNames[i] == null) {
        tokenNames[i] = "<INVALID>";
      }
    }
  }

  @Override
  @Deprecated
  public String[] getTokenNames() {
    return tokenNames;
  }

  @Override

  public Vocabulary getVocabulary() {
    return VOCABULARY;
  }

  @Override
  public String getGrammarFileName() {return "PlayScript.g4";}

  @Override
  public String[] getRuleNames() {return ruleNames;}

  @Override
  public String getSerializedATN() {return _serializedATN;}

  @Override
  public ATN getATN() {return _ATN;}

  public PlayScriptParser(TokenStream input) {
    super(input);
    _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  public static class ClassDeclarationContext extends ParserRuleContext {

    public TerminalNode CLASS() {return getToken(PlayScriptParser.CLASS, 0);}

    public TerminalNode IDENTIFIER() {return getToken(PlayScriptParser.IDENTIFIER, 0);}

    public ClassBodyContext classBody() {
      return getRuleContext(ClassBodyContext.class, 0);
    }

    public TerminalNode EXTENDS() {return getToken(PlayScriptParser.EXTENDS, 0);}

    public TypeTypeContext typeType() {
      return getRuleContext(TypeTypeContext.class, 0);
    }

    public TerminalNode IMPLEMENTS() {return getToken(PlayScriptParser.IMPLEMENTS, 0);}

    public TypeListContext typeList() {
      return getRuleContext(TypeListContext.class, 0);
    }

    public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {return RULE_classDeclaration;}

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).enterClassDeclaration(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).exitClassDeclaration(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof PlayScriptVisitor) return ((PlayScriptVisitor<? extends T>) visitor).visitClassDeclaration(this);
      else return visitor.visitChildren(this);
    }
  }

  public final ClassDeclarationContext classDeclaration() throws RecognitionException {
    ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
    enterRule(_localctx, 0, RULE_classDeclaration);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(96);
        match(CLASS);
        setState(97);
        match(IDENTIFIER);
        setState(100);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == EXTENDS) {
          {
            setState(98);
            match(EXTENDS);
            setState(99);
            typeType();
          }
        }

        setState(104);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == IMPLEMENTS) {
          {
            setState(102);
            match(IMPLEMENTS);
            setState(103);
            typeList();
          }
        }

        setState(106);
        classBody();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class ClassBodyContext extends ParserRuleContext {

    public TerminalNode LBRACE() {return getToken(PlayScriptParser.LBRACE, 0);}

    public TerminalNode RBRACE() {return getToken(PlayScriptParser.RBRACE, 0);}

    public List<ClassBodyDeclarationContext> classBodyDeclaration() {
      return getRuleContexts(ClassBodyDeclarationContext.class);
    }

    public ClassBodyDeclarationContext classBodyDeclaration(int i) {
      return getRuleContext(ClassBodyDeclarationContext.class, i);
    }

    public ClassBodyContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {return RULE_classBody;}

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).enterClassBody(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).exitClassBody(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof PlayScriptVisitor) return ((PlayScriptVisitor<? extends T>) visitor).visitClassBody(this);
      else return visitor.visitChildren(this);
    }
  }

  public final ClassBodyContext classBody() throws RecognitionException {
    ClassBodyContext _localctx = new ClassBodyContext(_ctx, getState());
    enterRule(_localctx, 2, RULE_classBody);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(108);
        match(LBRACE);
        setState(112);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLEAN) | (1L << BYTE) | (1L << CHAR) | (1L << CLASS) | (1L << DOUBLE) | (1L << FLOAT) | (1L << INT) | (1L << LONG) | (1L << SHORT) | (1L << VOID) | (1L << FUNCTION) | (1L << STRING))) != 0) || _la == SEMI || _la == IDENTIFIER) {
          {
            {
              setState(109);
              classBodyDeclaration();
            }
          }
          setState(114);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
        setState(115);
        match(RBRACE);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class ClassBodyDeclarationContext extends ParserRuleContext {

    public TerminalNode SEMI() {return getToken(PlayScriptParser.SEMI, 0);}

    public MemberDeclarationContext memberDeclaration() {
      return getRuleContext(MemberDeclarationContext.class, 0);
    }

    public ClassBodyDeclarationContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {return RULE_classBodyDeclaration;}

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).enterClassBodyDeclaration(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).exitClassBodyDeclaration(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof PlayScriptVisitor) return ((PlayScriptVisitor<? extends T>) visitor).visitClassBodyDeclaration(this);
      else return visitor.visitChildren(this);
    }
  }

  public final ClassBodyDeclarationContext classBodyDeclaration() throws RecognitionException {
    ClassBodyDeclarationContext _localctx = new ClassBodyDeclarationContext(_ctx, getState());
    enterRule(_localctx, 4, RULE_classBodyDeclaration);
    try {
      setState(119);
      _errHandler.sync(this);
      switch (_input.LA(1)) {
        case SEMI:
          enterOuterAlt(_localctx, 1);
        {
          setState(117);
          match(SEMI);
        }
        break;
        case BOOLEAN:
        case BYTE:
        case CHAR:
        case CLASS:
        case DOUBLE:
        case FLOAT:
        case INT:
        case LONG:
        case SHORT:
        case VOID:
        case FUNCTION:
        case STRING:
        case IDENTIFIER:
          enterOuterAlt(_localctx, 2);
        {
          setState(118);
          memberDeclaration();
        }
        break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class MemberDeclarationContext extends ParserRuleContext {

    public FunctionDeclarationContext functionDeclaration() {
      return getRuleContext(FunctionDeclarationContext.class, 0);
    }

    public FieldDeclarationContext fieldDeclaration() {
      return getRuleContext(FieldDeclarationContext.class, 0);
    }

    public ClassDeclarationContext classDeclaration() {
      return getRuleContext(ClassDeclarationContext.class, 0);
    }

    public MemberDeclarationContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {return RULE_memberDeclaration;}

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).enterMemberDeclaration(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).exitMemberDeclaration(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof PlayScriptVisitor) return ((PlayScriptVisitor<? extends T>) visitor).visitMemberDeclaration(this);
      else return visitor.visitChildren(this);
    }
  }

  public final MemberDeclarationContext memberDeclaration() throws RecognitionException {
    MemberDeclarationContext _localctx = new MemberDeclarationContext(_ctx, getState());
    enterRule(_localctx, 6, RULE_memberDeclaration);
    try {
      setState(124);
      _errHandler.sync(this);
      switch (getInterpreter().adaptivePredict(_input, 4, _ctx)) {
        case 1:
          enterOuterAlt(_localctx, 1);
        {
          setState(121);
          functionDeclaration();
        }
        break;
        case 2:
          enterOuterAlt(_localctx, 2);
        {
          setState(122);
          fieldDeclaration();
        }
        break;
        case 3:
          enterOuterAlt(_localctx, 3);
        {
          setState(123);
          classDeclaration();
        }
        break;
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class FunctionDeclarationContext extends ParserRuleContext {

    public TerminalNode IDENTIFIER() {return getToken(PlayScriptParser.IDENTIFIER, 0);}

    public FormalParametersContext formalParameters() {
      return getRuleContext(FormalParametersContext.class, 0);
    }

    public FunctionBodyContext functionBody() {
      return getRuleContext(FunctionBodyContext.class, 0);
    }

    public TypeTypeOrVoidContext typeTypeOrVoid() {
      return getRuleContext(TypeTypeOrVoidContext.class, 0);
    }

    public List<TerminalNode> LBRACK() {return getTokens(PlayScriptParser.LBRACK);}

    public TerminalNode LBRACK(int i) {
      return getToken(PlayScriptParser.LBRACK, i);
    }

    public List<TerminalNode> RBRACK() {return getTokens(PlayScriptParser.RBRACK);}

    public TerminalNode RBRACK(int i) {
      return getToken(PlayScriptParser.RBRACK, i);
    }

    public TerminalNode THROWS() {return getToken(PlayScriptParser.THROWS, 0);}

    public QualifiedNameListContext qualifiedNameList() {
      return getRuleContext(QualifiedNameListContext.class, 0);
    }

    public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {return RULE_functionDeclaration;}

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).enterFunctionDeclaration(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).exitFunctionDeclaration(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof PlayScriptVisitor) return ((PlayScriptVisitor<? extends T>) visitor).visitFunctionDeclaration(this);
      else return visitor.visitChildren(this);
    }
  }

  public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
    FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
    enterRule(_localctx, 8, RULE_functionDeclaration);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(127);
        _errHandler.sync(this);
        switch (getInterpreter().adaptivePredict(_input, 5, _ctx)) {
          case 1: {
            setState(126);
            typeTypeOrVoid();
          }
          break;
        }
        setState(129);
        match(IDENTIFIER);
        setState(130);
        formalParameters();
        setState(135);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (_la == LBRACK) {
          {
            {
              setState(131);
              match(LBRACK);
              setState(132);
              match(RBRACK);
            }
          }
          setState(137);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
        setState(140);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == THROWS) {
          {
            setState(138);
            match(THROWS);
            setState(139);
            qualifiedNameList();
          }
        }

        setState(142);
        functionBody();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class FunctionBodyContext extends ParserRuleContext {

    public BlockContext block() {
      return getRuleContext(BlockContext.class, 0);
    }

    public TerminalNode SEMI() {return getToken(PlayScriptParser.SEMI, 0);}

    public FunctionBodyContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {return RULE_functionBody;}

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).enterFunctionBody(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).exitFunctionBody(this);
    }
